Added dummy Model and Repository class
* added a cli method for dummy inserts into CR
* added dummy code to Standard controller
* added new settings to Settings.yaml to make the workspace to work on with a Repository class configurable
* added PHPCR Document Model
* added PHPCR Repository Class for Document Model

Signed-off-by: SwiftLizard <chris@swift-lizard.com>

--- a/SwiftLizard.PHPCR/Configuration/Settings.yaml
+++ b/SwiftLizard.PHPCR/Configuration/Settings.yaml
@@ -18,3 +18,5 @@ SwiftLizard:
         default:
           user: admin
           password: admin
+      JackrabbitRepository:
+        workspace: default
